# munyo-discs

./: README.md  main.py  munyo-discs.spec  pyproject.toml  pyrightconfig.json  pyvenv.cfg
disc-handler/: main.py  pyproject.toml
disc-handler/data/: discos-munyo-alphabetic.csv  discos-munyo-obtained.csv
disc-handler/disc_handler/disc_set/: disc_set.py  disc_set_exceptions.py  disc_set_owned.py  disc_set_wished.py
disc_handler/: main.py  pyproject.toml
disc_handler/data/: discos-munyo-to-add-discologs.csv
munyo-discs-cli/: README.md  package-lock.json  package.json  vite.config.js
munyo-discs-service/: .gitignore  main.py  pyproject.toml
munyo-discs-service/api/artist/: artist.py  service.py
munyo-discs-service/api/connection/: connection.py  service.py
munyo-discs-service/api/disc/: disc.py  service.py
munyo-discs-service/api/playlist/: playlist.py  service.py
munyo-discs-service/api/song/: song.py
munyo-discs-service/api/spotify/: service.py
munyo-discs-service/munyo_discs_service/: main.py
munyo-discs-service/munyo_discs_service/api/artist/: artist.py  service.py
munyo-discs-service/munyo_discs_service/api/connection/: connection.py  service.py
munyo-discs-service/munyo_discs_service/api/disc/: disc.py  service.py
munyo-discs-service/munyo_discs_service/api/playlist/: service.py
munyo-discs-service/munyo_discs_service/api/spotify/: service.py  spotify.py
munyo-discs-service/munyo_discs_service/uploads/: owned-cds-orig.csv
munyo-discs-service/uploads/: wished-cds-orig.csv  wished-cds.csv
scripts/: build-pyinstaller.bash
(+30 files in other folders)
