[project]
name = "munyo-discs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "disc-handler",
    "munyo-discs-service",
]

[tool.uv.workspace]
members = [
    "munyo-discs-service",
    "disc-handler",
]

[tool.uv.sources]
munyo-discs-service = { workspace = true }
disc-handler = { workspace = true }

