[project]
name = "munyo-discs-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "disc-handler",
    "fastapi[standard]>=0.115.14",
    "pandas>=2.3.0",
    "spotipy>=2.25.1",
]

[tool.uv.sources]
disc-handler = { workspace = true }
